--- a/lp02.md
+++ b/lp02.md
@@ -3,3 +3,5 @@
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asediada con un virus contra el que **Larry** y sus amigos deberán luchar.
 
 En esta aventura, **Larry** se enterará de nuevos detalles sobre su destino.
+
+Como el malvado hacker *youresoboring* why am I writing all of this bullshit?
